Footer now sticks to the floor

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
         };
     </script>
 </head>
-<body class="bg-[#1e1e2e] text-white">
+<body class="bg-[#1e1e2e] text-white min-h-screen flex flex-col">
     
     <!-- Header -->
     <div class="sticky top-0 z-50 bg-[#45475a] shadow-lg border-b border-[#6c7086] relative">
@@ -101,7 +101,7 @@
         </div>
     </div>
     <!-- Main Content -->
-    <div class="container mx-auto px-4">
+    <div class="container mx-auto px-4 flex-grow">
         <div class="mx-auto bg-[#45475a] rounded-lg shadow-md p-8 mt-8 text-white">
             <h1 class="text-2xl font-bold mb-8">XML to Dependencies Converter</h1>
 
